[gd_scene load_steps=7 format=3 uid="uid://bp05u4n68wh7n"]

[ext_resource type="Script" uid="uid://cj15svknexhu1" path="res://Game/Scripts/core.gd" id="1_iv3md"]
[ext_resource type="Script" uid="uid://cna4l3dawhlfn" path="res://Game/Scripts/player_movement.gd" id="2_37esa"]
[ext_resource type="Texture2D" uid="uid://b4gmav1d5aljr" path="res://assets/white.png" id="2_jxerj"]
[ext_resource type="Texture2D" uid="uid://3qpnmi020tar" path="res://assets/Player.png" id="3_jxerj"]
[ext_resource type="Script" uid="uid://ma1oq48smx5x" path="res://Game/Scripts/ButtonMovement/up.gd" id="5_jxerj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acwke"]
size = Vector2(40.4757, 47.693)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iv3md")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -8161.0
offset_top = -3339.0
offset_right = 9752.0
offset_bottom = 5542.0
texture = ExtResource("2_jxerj")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("2_37esa")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(65.5, 65)
scale = Vector2(3.78125, 3.6875)
texture = ExtResource("3_jxerj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(66, 65.5)
scale = Vector2(3.01416, 2.49512)
shape = SubResource("RectangleShape2D_acwke")

[node name="up" type="Button" parent="."]
offset_left = 76.0
offset_top = 428.0
offset_right = 160.0
offset_bottom = 491.0
text = "Up"
script = ExtResource("5_jxerj")

[node name="down" type="Button" parent="."]
offset_left = 68.0
offset_top = 568.0
offset_right = 154.0
offset_bottom = 636.0
text = "Down"

[node name="right" type="Button" parent="."]
offset_left = 161.0
offset_top = 498.0
offset_right = 245.0
offset_bottom = 565.0
text = "right"

[node name="left" type="Button" parent="."]
anchors_preset = -1
anchor_left = -0.364
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 496.0
offset_right = 69.0
offset_bottom = 562.0
text = "left"

[connection signal="button_down" from="up" to="CharacterBody2D" method="_on_up_button_down"]
[connection signal="button_up" from="up" to="CharacterBody2D" method="_on_up_button_up"]
[connection signal="button_down" from="down" to="CharacterBody2D" method="_on_down_button_down"]
[connection signal="button_up" from="down" to="CharacterBody2D" method="_on_down_button_up"]
[connection signal="button_down" from="right" to="CharacterBody2D" method="_on_right_button_down"]
[connection signal="button_up" from="right" to="CharacterBody2D" method="_on_right_button_up"]
[connection signal="button_down" from="left" to="CharacterBody2D" method="_on_left_button_down"]
[connection signal="button_up" from="left" to="CharacterBody2D" method="_on_left_button_up"]
